--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/cors": "^2.8.17",
+    "@types/pg": "^8.10.9",
     "@types/nodemailer": "^6.4.14",
     "@types/node-cron": "^3.0.11",
     "@types/multer": "^1.4.11",
